# 430_seminer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  display.py  docker-compose.yml  pyproject.toml  requirements.txt  set_status.py
.devcontainer/: Dockerfile  devcontainer.json
ans/: display.py  get_status.py  sandbox.ipynb  train_model.py
data/: train_data.csv  train_label.csv
dataset/: train_label.csv
models/: model.pkl
params/: knn_model.pkl
src/: display.py  get_status.py  get_status_2.py  model.py  sandbox.ipynb  set_status.py  train_model.py
