[tool.poetry]
name = "430-seminer"
version = "0.1.0"
description = ""
authors = ["Ryo Shirai <65144528+ryo-shirai421@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "430_seminer"}]

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
japanize-matplotlib = "^1.1.3"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
mypy = "^1.1.1"
black = "^23.1.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[flake8]
extend-ignore = E203
max-line-length = 119

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119